--- a/Prueba-5.ipynb
+++ b/Prueba-5.ipynb
@@ -13,54 +13,125 @@
       "--- Ciclo de optimización 1 ---\n",
       "Este molino puede producir P30 o P40\n",
       "\n",
-      "Optimizando MC1\n",
-      "Producto actual: P30\n",
-      "Necesidades: Clinker 49.32t/h, Puzolana 21.60t/h, Yeso 1.08t/h\n",
+      "Necesidades para MC1 - P30:\n",
+      "Clinker: 49.32 t/h\n",
+      "Puzolana: 21.60 t/h\n",
+      "Yeso: 1.08 t/h\n",
       "\n",
       "Recomendaciones:\n",
-      "Recomiendo alimentar Clinker a MC1 (Espacio disponible: 400.00t)\n",
+      "Recomiendo alimentar Clinker a MC1 desde Pretrit (Espacio disponible: 400.00t)\n",
       "Recomiendo alimentar Puzolana a MC1 (Espacio disponible: 240.00t)\n",
       "Recomiendo alimentar Yeso a MC1 (Espacio disponible: 60.00t)\n",
       "\n",
       "Restricciones:\n",
       "Es necesario vaciar el sistema antes de una nueva alimentación para evitar contaminación.\n",
-      "Tiempo estimado para llenar Clinker: 8.11 horas\n",
-      "Tiempo estimado para llenar Puzolana: 11.11 horas\n",
-      "Tiempo estimado para llenar Yeso: 55.56 horas\n",
+      "No se puede alimentar simultáneamente Clinker, Puzolana y Yeso a MC3.\n",
+      "No se puede alimentar Clinker a múltiples molinos simultáneamente.\n",
       "\n",
-      "Intentando alimentar 400.00t de Clinker (Tiempo de llenado: 8.11 horas)\n",
-      "Alimentado 400.00t de Clinker a MC1 (Nivel: 11.20m)\n",
+      "Intentando alimentar Clinker a MC1 por la ruta: Hacia MC1 desde Pretrit\n",
+      "Alimentado 49.32t de Clinker a MC1 (Nivel: 1.38m)\n",
+      "Se alimentó 49.32t de Clinker a MC1\n",
       "\n",
-      "Intentando alimentar 240.00t de Puzolana (Tiempo de llenado: 11.11 horas)\n",
+      "Intentando alimentar Puzolana a MC1 por la ruta: Húmeda a MC1 por MC2\n",
       "Ajustando velocidad del transportador a 1111.00 RPM para puzolana\n",
-      "Alimentado 240.00t de Puzolana a MC1 (Nivel: 9.60m)\n",
+      "Alimentado 21.60t de Puzolana a MC1 (Nivel: 0.86m)\n",
+      "Se alimentó 21.60t de Puzolana a MC1\n",
       "\n",
-      "Intentando alimentar 60.00t de Yeso (Tiempo de llenado: 55.56 horas)\n",
+      "Intentando alimentar Yeso a MC1 por la ruta: Hacia MC1 por MC2\n",
       "Ajustando velocidad del transportador a 888.00 RPM para yeso\n",
-      "Alimentado 60.00t de Yeso a MC1 (Nivel: 0.40m)\n",
+      "Alimentado 1.08t de Yeso a MC1 (Nivel: 0.01m)\n",
+      "Se alimentó 1.08t de Yeso a MC1\n",
       "\n",
       "Estado actual después de la alimentación:\n",
-      "Niveles MC1: {'Clinker': 400.0, 'Puzolana': 240.0, 'Yeso': 60.0}\n",
+      "Niveles MC1: {'Clinker': 49.32, 'Puzolana': 21.6, 'Yeso': 1.08}\n",
       "Niveles MC2: {'Clinker': 0, 'Puzolana_Humeda': 0, 'Puzolana_Seca': 0, 'Yeso': 0}\n",
       "Niveles MC3: {'Clinker': 0, 'Clinker_Silo_Blanco': 0, 'Puzolana': 0, 'Yeso': 0}\n",
-      "\n",
-      "--------------------------------------------------\n",
       "\n",
       "--- Ciclo de optimización 2 ---\n",
       "Este molino puede producir P10, P16, P20 o P30\n",
       "\n",
-      "Optimizando MC2\n",
-      "Producto actual: P10\n",
-      "Necesidades: Clinker 60.90t/h, Puzolana_Humeda 4.90t/h, Puzolana_Seca 2.10t/h, Yeso 2.10t/h\n",
+      "Necesidades para MC2 - P10:\n",
+      "Clinker: 60.90 t/h\n",
+      "Puzolana_Humeda: 4.90 t/h\n",
+      "Puzolana_Seca: 2.10 t/h\n",
+      "Yeso: 2.10 t/h\n",
       "\n",
       "Recomendaciones:\n",
-      "Recomiendo alimentar Clinker a MC2 (Espacio disponible: 240.00t)\n",
-      "Recomiendo alimentar Puzolana Húmeda a MC2 (Espacio disponible: 400.00t)\n",
-      "Recomiendo alimentar Puzolana Seca a MC2 (Espacio disponible: 80.00t)\n",
-      "Recomiendo alimentar Yeso a MC2 (Espacio disponible: 96.00t)\n",
+      "Recomiendo alimentar Clinker a MC2 desde Pretrit (Espacio disponible: 240.00t)\n",
+      "Recomiendo alimentar Puzolana Húmeda a 426HO04 por MC2 (Espacio disponible: 400.00t)\n",
+      "Recomiendo alimentar Puzolana Seca a 426HO02 por 426HO04 (Espacio disponible: 80.00t)\n",
+      "Recomiendo alimentar Yeso a MC2 por MC2 (Espacio disponible: 96.00t)\n",
       "\n",
       "Restricciones:\n",
-      "Es necesario vaciar el sistema antes de una nueva alimentación para evitar contaminación.\n"
+      "Es necesario vaciar el sistema antes de una nueva alimentación para evitar contaminación.\n",
+      "No se puede alimentar simultáneamente Clinker, Puzolana y Yeso a MC3.\n",
+      "No se puede alimentar Clinker a múltiples molinos simultáneamente.\n",
+      "\n",
+      "Intentando alimentar Clinker a MC2 por la ruta: Hacia MC2 desde Pretrit\n",
+      "Alimentado 60.90t de Clinker a MC2 (Nivel: 1.83m)\n",
+      "Se alimentó 60.90t de Clinker a MC2\n",
+      "\n",
+      "Intentando alimentar Puzolana_Humeda a MC2 por la ruta: P.H. a 426HO04 por MC2\n",
+      "Ajustando velocidad del transportador a 1111.00 RPM para puzolana\n",
+      "Alimentado 4.90t de Puzolana_Humeda a MC2 (Nivel: 0.15m)\n",
+      "Se alimentó 4.90t de Puzolana_Humeda a MC2\n",
+      "\n",
+      "Intentando alimentar Puzolana_Seca a MC2 por la ruta: P.S a 426HO02 por 426HO04\n",
+      "Ajustando velocidad del transportador a 1111.00 RPM para puzolana\n",
+      "Alimentado 2.10t de Puzolana_Seca a MC2 (Nivel: 0.25m)\n",
+      "Se alimentó 2.10t de Puzolana_Seca a MC2\n",
+      "\n",
+      "Intentando alimentar Yeso a MC2 por la ruta: Hacia MC2 por MC2\n",
+      "Ajustando velocidad del transportador a 888.00 RPM para yeso\n",
+      "Alimentado 2.10t de Yeso a MC2 (Nivel: 0.16m)\n",
+      "Se alimentó 2.10t de Yeso a MC2\n",
+      "\n",
+      "Estado actual después de la alimentación:\n",
+      "Niveles MC1: {'Clinker': 49.32, 'Puzolana': 21.6, 'Yeso': 1.08}\n",
+      "Niveles MC2: {'Clinker': 60.9, 'Puzolana_Humeda': 4.9, 'Puzolana_Seca': 2.1, 'Yeso': 2.1}\n",
+      "Niveles MC3: {'Clinker': 0, 'Clinker_Silo_Blanco': 0, 'Puzolana': 0, 'Yeso': 0}\n",
+      "\n",
+      "--- Ciclo de optimización 3 ---\n",
+      "Este molino puede producir P30\n",
+      "\n",
+      "Necesidades para MC3 - P30:\n",
+      "Clinker: 24.97 t/h\n",
+      "Puzolana: 11.10 t/h\n",
+      "Yeso: 0.93 t/h\n",
+      "\n",
+      "Recomendaciones:\n",
+      "Recomiendo alimentar Clinker a Silo Blanco desde Pretrit (Espacio disponible: 250.00t)\n",
+      "Recomiendo alimentar Puzolana Seca a MC3 por MC2 (Espacio disponible: 17.50t)\n",
+      "Recomiendo alimentar Yeso a MC3 (Espacio disponible: 15.00t)\n",
+      "\n",
+      "Restricciones:\n",
+      "Es necesario vaciar el sistema antes de una nueva alimentación para evitar contaminación.\n",
+      "No se puede alimentar simultáneamente Clinker, Puzolana y Yeso a MC3.\n",
+      "No se puede alimentar Clinker a múltiples molinos simultáneamente.\n",
+      "\n",
+      "Intentando alimentar Clinker a MC3 por la ruta: Hacia Silo 3 desde Pretrit\n",
+      "Alimentado 24.97t de Clinker a MC3 (Nivel: 41.62%)\n",
+      "Se alimentó 24.97t de Clinker a MC3\n",
+      "\n",
+      "Intentando alimentar Puzolana a MC3 por la ruta: P. seca a MC3 por MC2\n",
+      "Ajustando velocidad del transportador a 1111.00 RPM para puzolana\n",
+      "Alimentado 11.10t de Puzolana a MC3 (Nivel: 31.71%)\n",
+      "Se alimentó 11.10t de Puzolana a MC3\n",
+      "\n",
+      "Intentando alimentar Yeso a MC3 por la ruta: Hacia MC3 por MC3\n",
+      "Ajustando velocidad del transportador a 888.00 RPM para yeso\n",
+      "Alimentado 0.93t de Yeso a MC3 (Nivel: 3.08%)\n",
+      "Se alimentó 0.93t de Yeso a MC3\n",
+      "\n",
+      "Estado actual después de la alimentación:\n",
+      "Niveles MC1: {'Clinker': 49.32, 'Puzolana': 21.6, 'Yeso': 1.08}\n",
+      "Niveles MC2: {'Clinker': 60.9, 'Puzolana_Humeda': 4.9, 'Puzolana_Seca': 2.1, 'Yeso': 2.1}\n",
+      "Niveles MC3: {'Clinker': 24.97, 'Clinker_Silo_Blanco': 0, 'Puzolana': 11.1, 'Yeso': 0.93}\n",
+      "\n",
+      "--- Ciclo de optimización 4 ---\n",
+      "Error, Ingrese un molino válido\n",
+      "\n",
+      "--- Ciclo de optimización 4 ---\n"
      ]
     }
    ],
@@ -101,7 +172,6 @@
     "        niveles_MC2 = {\"Clinker\": 0, \"Puzolana_Humeda\": 0, \"Puzolana_Seca\": 0, \"Yeso\": 0}\n",
     "    elif molino == \"MC3\":\n",
     "        niveles_MC3 = {\"Clinker\": 0, \"Clinker_Silo_Blanco\": 0, \"Puzolana\": 0, \"Yeso\": 0}\n",
-    "\n",
     "\n",
     "def ajustar_velocidad(material, min_vel, max_vel):\n",
     "    while True:\n",
@@ -304,6 +374,7 @@
     "\n",
     "    return tiempos_llenado\n",
     "\n",
+    "                                   \n",
     "def generar_recomendaciones(molino_actual):\n",
     "    recomendaciones = []\n",
     "    restricciones = []\n",
@@ -318,7 +389,7 @@
     "        esp_yeso = min(espacio_disponible(niveles_MC1[\"Yeso\"], tolvas_MC1[\"Yeso\"][\"capacidad\"], rendimiento), 60 - niveles_MC1[\"Yeso\"])\n",
     "\n",
     "        if esp_clinker > 0:\n",
-    "            recomendaciones.append(f\"Recomiendo alimentar Clinker a MC1 (Espacio disponible: {esp_clinker:.2f}t)\")\n",
+    "            recomendaciones.append(f\"Recomiendo alimentar Clinker a MC1 desde Pretrit (Espacio disponible: {esp_clinker:.2f}t)\")\n",
     "        if esp_puzolana > 0:\n",
     "            recomendaciones.append(f\"Recomiendo alimentar Puzolana a MC1 (Espacio disponible: {esp_puzolana:.2f}t)\")\n",
     "        if esp_yeso > 0:\n",
@@ -332,13 +403,13 @@
     "        esp_yeso = espacio_disponible(niveles_MC2[\"Yeso\"], tolvas_MC2[\"Yeso\"][\"capacidad\"], rendimiento)\n",
     "\n",
     "        if esp_clinker > 0:\n",
-    "            recomendaciones.append(f\"Recomiendo alimentar Clinker a MC2 (Espacio disponible: {esp_clinker:.2f}t)\")\n",
+    "            recomendaciones.append(f\"Recomiendo alimentar Clinker a MC2 desde Pretrit (Espacio disponible: {esp_clinker:.2f}t)\")\n",
     "        if esp_puzolana_h > 0:\n",
-    "            recomendaciones.append(f\"Recomiendo alimentar Puzolana Húmeda a MC2 (Espacio disponible: {esp_puzolana_h:.2f}t)\")\n",
+    "            recomendaciones.append(f\"Recomiendo alimentar Puzolana Húmeda a 426HO04 por MC2 (Espacio disponible: {esp_puzolana_h:.2f}t)\")\n",
     "        if esp_puzolana_s > 0:\n",
-    "            recomendaciones.append(f\"Recomiendo alimentar Puzolana Seca a MC2 (Espacio disponible: {esp_puzolana_s:.2f}t)\")\n",
+    "            recomendaciones.append(f\"Recomiendo alimentar Puzolana Seca a 426HO02 por 426HO04 (Espacio disponible: {esp_puzolana_s:.2f}t)\")\n",
     "        if esp_yeso > 0:\n",
-    "            recomendaciones.append(f\"Recomiendo alimentar Yeso a MC2 (Espacio disponible: {esp_yeso:.2f}t)\")\n",
+    "            recomendaciones.append(f\"Recomiendo alimentar Yeso a MC2 por MC2 (Espacio disponible: {esp_yeso:.2f}t)\")\n",
     "\n",
     "    elif molino_actual == \"MC3\":\n",
     "        rendimiento = 0.5\n",
@@ -348,11 +419,12 @@
     "        esp_yeso = espacio_disponible(niveles_MC3[\"Yeso\"], tolvas_MC3[\"Yeso\"][\"capacidad\"], rendimiento)\n",
     "\n",
     "        if esp_clinker > 0:\n",
-    "            recomendaciones.append(f\"Recomiendo alimentar Clinker a MC3 (Espacio disponible: {esp_clinker:.2f}t)\")\n",
-    "        if esp_clinker_sb > 0:\n",
-    "            recomendaciones.append(f\"Recomiendo alimentar Clinker Silo Blanco a MC3 (Espacio disponible: {esp_clinker_sb:.2f}t)\")\n",
+    "            if niveles_MC3[\"Clinker_Silo_Blanco\"] / tolvas_MC3[\"Clinker_Silo_Blanco\"][\"capacidad\"] > 0.3:  # Si el Silo Blanco tiene más del 30% de capacidad\n",
+    "                recomendaciones.append(f\"Recomiendo alimentar Clinker a MC3 desde Silo Blanco (Espacio disponible: {esp_clinker:.2f}t)\")\n",
+    "            else:\n",
+    "                recomendaciones.append(f\"Recomiendo alimentar Clinker a Silo Blanco desde Pretrit (Espacio disponible: {esp_clinker_sb:.2f}t)\")\n",
     "        if esp_puzolana > 0:\n",
-    "            recomendaciones.append(f\"Recomiendo alimentar Puzolana Seca a MC3 (Espacio disponible: {esp_puzolana:.2f}t)\")\n",
+    "            recomendaciones.append(f\"Recomiendo alimentar Puzolana Seca a MC3 por MC2 (Espacio disponible: {esp_puzolana:.2f}t)\")\n",
     "        if esp_yeso > 0:\n",
     "            recomendaciones.append(f\"Recomiendo alimentar Yeso a MC3 (Espacio disponible: {esp_yeso:.2f}t)\")\n",
     "\n",
@@ -360,8 +432,63 @@
     "        recomendaciones.append(f\"Todas las tolvas de {molino_actual} están llenas o cerca de su capacidad máxima.\")\n",
     "\n",
     "    restricciones.append(\"Es necesario vaciar el sistema antes de una nueva alimentación para evitar contaminación.\")\n",
+    "    restricciones.append(\"No se puede alimentar simultáneamente Clinker, Puzolana y Yeso a MC3.\")\n",
+    "    restricciones.append(\"No se puede alimentar Clinker a múltiples molinos simultáneamente.\")\n",
     "\n",
     "    return recomendaciones, restricciones\n",
+    "\n",
+    "def seleccionar_ruta_alimentacion(molino, material):\n",
+    "    if molino == \"MC1\":\n",
+    "        if material == \"Clinker\":\n",
+    "            return \"Hacia MC1 desde Pretrit\"\n",
+    "        elif material == \"Puzolana\":\n",
+    "            return \"Húmeda a MC1 por MC1\" if random.choice([True, False]) else \"Húmeda a MC1 por MC2\"\n",
+    "        elif material == \"Yeso\":\n",
+    "            return \"Hacia MC1 por MC1\" if random.choice([True, False]) else \"Hacia MC1 por MC2\"\n",
+    "    elif molino == \"MC2\":\n",
+    "        if material == \"Clinker\":\n",
+    "            return \"Hacia MC2 desde Pretrit\"\n",
+    "        elif material == \"Puzolana_Humeda\":\n",
+    "            return \"P.H. a 426HO04 por MC2\"\n",
+    "        elif material == \"Puzolana_Seca\":\n",
+    "            return \"P.S a 426HO02 por 426HO04\"\n",
+    "        elif material == \"Yeso\":\n",
+    "            return \"Hacia MC2 por MC2\"\n",
+    "    elif molino == \"MC3\":\n",
+    "        if material == \"Clinker\":\n",
+    "            if niveles_MC3[\"Clinker_Silo_Blanco\"] / tolvas_MC3[\"Clinker_Silo_Blanco\"][\"capacidad\"] > 0.3:\n",
+    "                return \"Hacia MC3 desde Silo3\"\n",
+    "            else:\n",
+    "                return \"Hacia Silo 3 desde Pretrit\"\n",
+    "        elif material == \"Puzolana\":\n",
+    "            return \"P. seca a MC3 por MC2\"\n",
+    "        elif material == \"Yeso\":\n",
+    "            return random.choice([\"Hacia MC3 por MC1\", \"Hacia MC3 por MC2\", \"Hacia MC3 por MC3\"])\n",
+    "    return \"Ruta no especificada\"\n",
+    "\n",
+    "def optimizar_alimentacion(molino, tipo_produccion):\n",
+    "    necesidades = calcular_necesidades(molino, tipo_produccion)\n",
+    "    print(f\"\\nNecesidades para {molino} - {tipo_produccion}:\")\n",
+    "    for material, cantidad in necesidades.items():\n",
+    "        print(f\"{material}: {cantidad:.2f} t/h\")\n",
+    "\n",
+    "    recomendaciones, restricciones = generar_recomendaciones(molino)\n",
+    "    print(\"\\nRecomendaciones:\")\n",
+    "    for recomendacion in recomendaciones:\n",
+    "        print(recomendacion)\n",
+    "    print(\"\\nRestricciones:\")\n",
+    "    for restriccion in restricciones:\n",
+    "        print(restriccion)\n",
+    "\n",
+    "    for material, cantidad_necesaria in necesidades.items():\n",
+    "        if cantidad_necesaria > 0:\n",
+    "            ruta = seleccionar_ruta_alimentacion(molino, material)\n",
+    "            print(f\"\\nIntentando alimentar {material} a {molino} por la ruta: {ruta}\")\n",
+    "            cantidad_alimentada = intentar_alimentar(molino, material, cantidad_necesaria)\n",
+    "            if cantidad_alimentada > 0:\n",
+    "                print(f\"Se alimentó {cantidad_alimentada:.2f}t de {material} a {molino}\")\n",
+    "            else:\n",
+    "                print(f\"No se pudo alimentar {material} a {molino}\")\n",
     "\n",
     "def main():\n",
     "    global niveles_MC1, niveles_MC2, niveles_MC3\n",
@@ -374,9 +501,6 @@
     "        if molino not in [\"MC1\", \"MC2\", \"MC3\"]:\n",
     "            print(\"Error, Ingrese un molino válido\")\n",
     "            continue\n",
-    "\n",
-    "        # Resetear niveles del molino seleccionado\n",
-    "        resetear_niveles_molino(molino)\n",
     "\n",
     "        if molino == \"MC1\":\n",
     "            print(\"Este molino puede producir P30 o P40\")\n",
@@ -393,57 +517,12 @@
     "            print(f\"Error, Ingrese un tipo de producción válido para {molino}\")\n",
     "            continue\n",
     "\n",
-    "        print(f\"\\nOptimizando {molino}\")\n",
-    "        print(f\"Producto actual: {tipo_produccion}\")\n",
-    "\n",
-    "        necesidades = calcular_necesidades(molino, tipo_produccion)\n",
-    "        print(f\"Necesidades: {', '.join([f'{material} {cantidad:.2f}t/h' for material, cantidad in necesidades.items()])}\")\n",
-    "\n",
-    "        # Generar y mostrar recomendaciones antes de intentar alimentar\n",
-    "        recomendaciones, restricciones = generar_recomendaciones(molino)\n",
-    "\n",
-    "        if recomendaciones:\n",
-    "            print(\"\\nRecomendaciones:\")\n",
-    "            for recomendacion in recomendaciones:\n",
-    "                print(recomendacion)\n",
-    "        if restricciones:\n",
-    "            print(\"\\nRestricciones:\")\n",
-    "            for restriccion in restricciones:\n",
-    "                print(restriccion)\n",
-    "\n",
-    "        # Preguntar al operador si desea proceder con la alimentación\n",
-    "        proceder = input(\"\\n¿Desea proceder con la alimentación? (s/n): \").lower()\n",
-    "        if proceder != 's':\n",
-    "            print(\"Alimentación cancelada.\")\n",
-    "            continue\n",
-    "\n",
-    "        tiempos_llenado = calcular_tiempos_llenado(molino, necesidades)\n",
-    "        for material, tiempo in tiempos_llenado.items():\n",
-    "            if tiempo != float('inf'):\n",
-    "                print(f\"Tiempo estimado para llenar {material}: {tiempo:.2f} horas\")\n",
-    "            else:\n",
-    "                print(f\"No se necesita llenar {material}\")\n",
-    "\n",
-    "        tiempo_llenado = min(tiempos_llenado.values())\n",
-    "\n",
-    "        for material, cantidad_por_hora in necesidades.items():\n",
-    "            tiempo_llenado_material = tiempos_llenado[material]\n",
-    "            if tiempo_llenado_material != float('inf'):\n",
-    "                cantidad_total = cantidad_por_hora * tiempo_llenado_material\n",
-    "                if molino == \"MC1\" and material == \"Yeso\":\n",
-    "                    max_cantidad = 2 / tolvas_MC1[\"Yeso\"][\"max_metros\"] * tolvas_MC1[\"Yeso\"][\"capacidad\"] - niveles_MC1[\"Yeso\"]\n",
-    "                    cantidad_total = min(cantidad_total, max_cantidad)\n",
-    "                print(f\"\\nIntentando alimentar {cantidad_total:.2f}t de {material} (Tiempo de llenado: {tiempo_llenado_material:.2f} horas)\")\n",
-    "                intentar_alimentar(molino, material, cantidad_total)\n",
-    "            else:\n",
-    "                print(f\"\\nNo es necesario alimentar {material}\")\n",
+    "        optimizar_alimentacion(molino, tipo_produccion)\n",
     "\n",
     "        print(\"\\nEstado actual después de la alimentación:\")\n",
     "        print(f\"Niveles MC1: {redondear_diccionario(niveles_MC1)}\")\n",
     "        print(f\"Niveles MC2: {redondear_diccionario(niveles_MC2)}\")\n",
     "        print(f\"Niveles MC3: {redondear_diccionario(niveles_MC3)}\")\n",
-    "\n",
-    "        print(\"\\n\" + \"-\"*50)\n",
     "\n",
     "        ciclo += 1\n",
     "\n",
