--- a/Prueba-3.ipynb
+++ b/Prueba-3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -10,49 +10,107 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Tipos de producto disponibles para MC1:\n",
-      "- P10\n",
-      "- P16\n",
-      "- P20\n",
-      "- P30\n",
-      "- P40\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Tipos de producto disponibles para MC1: P30, P40\n",
       "\n",
-      "Tipos de producto disponibles para MC2:\n",
-      "- P10\n",
-      "- P16\n",
-      "- P20\n",
-      "- P30\n",
-      "- P40\n",
+      "Tipos de producto disponibles para MC2: P10, P16, P20, P30\n",
       "\n",
-      "Tipos de producto disponibles para MC3:\n",
-      "- P10\n",
-      "- P16\n",
-      "- P20\n",
-      "- P30\n",
-      "- P40\n",
+      "Tipos de producto disponibles para MC3: P30\n",
+      "\n",
+      "Optimizando MC1\n",
+      "Producto actual: P30\n",
+      "Necesidades:\n",
+      "  Clinker: 49.32t/h\n",
+      "  Puzolana: 21.60t/h\n",
+      "  Yeso: 1.08t/h\n",
+      "Tiempo estimado para llenar Clinker: 10.14 horas\n",
+      "Tiempo estimado para llenar Puzolana: 13.89 horas\n",
+      "Tiempo estimado para llenar Yeso: 277.78 horas\n",
+      "Restricciones:\n",
+      "Es necesario vaciar el sistema antes de una nueva alimentación para evitar contaminación.\n",
+      "\n",
+      "Optimizando MC2\n",
+      "Producto actual: P10\n",
+      "Necesidades:\n",
+      "  Clinker: 60.90t/h\n",
+      "  Puzolana_humeda: 7.00t/h\n",
+      "  Yeso: 2.10t/h\n",
+      "Tiempo estimado para llenar Clinker: 4.93 horas\n",
+      "Tiempo estimado para llenar Puzolana_humeda: 71.43 horas\n",
+      "No se requiere Puzolana_seca para el producto actual en MC2\n",
+      "Tiempo estimado para llenar Yeso: 57.14 horas\n",
+      "Restricciones:\n",
+      "Es necesario vaciar el sistema antes de una nueva alimentación para evitar contaminación.\n",
+      "\n",
+      "Optimizando MC3\n",
+      "Producto actual: P30\n",
+      "Necesidades:\n",
+      "  Clinker: 24.98t/h\n",
+      "  Puzolana: 11.10t/h\n",
+      "  Yeso: 0.93t/h\n",
+      "Tiempo estimado para llenar Clinker: 2.40 horas\n",
+      "Tiempo estimado para llenar Puzolana: 3.15 horas\n",
+      "Tiempo estimado para llenar Yeso: 32.43 horas\n",
+      "Restricciones:\n",
+      "Es necesario vaciar el sistema antes de una nueva alimentación para evitar contaminación.\n",
       "\n",
       "Recomendaciones de alimentación:\n",
-      "- Alimentar Clinker a MC1 desde Pretrit\n",
+      "- Alimentar Clinker a MC1 (Espacio disponible: 500.00t)\n",
       "  ADVERTENCIA: Posible contaminación al vaciar el sistema. Proceder con precaución.\n",
       "  Esperar 3 minutos para vaciado de bandas\n",
-      "- Alimentar Yeso a MC1 por MC1\n",
+      "- Alimentar Puzolana Húmeda a MC1 por MC1 (Espacio disponible: 300.00t)\n",
+      "  Ajustar velocidad del transportador a 1100-1150 RPM\n",
+      "  ADVERTENCIA: Posible contaminación al vaciar el sistema. Proceder con precaución.\n",
+      "  Esperar 3 minutos para vaciado de bandas\n",
+      "- Alimentar Yeso a MC1 por MC1 (Espacio disponible: 300.00t)\n",
       "  Ajustar velocidad del transportador a 850-900 RPM\n",
       "  ADVERTENCIA: Posible contaminación al vaciar el sistema. Proceder con precaución.\n",
       "  Esperar 3 minutos para vaciado de bandas\n",
-      "- Alimentar Puzolana Húmeda a 426HO04 por MC2\n",
+      "- Alimentar Clinker a MC2 (Espacio disponible: 300.00t)\n",
+      "  ADVERTENCIA: Posible contaminación al vaciar el sistema. Proceder con precaución.\n",
+      "  Esperar 3 minutos para vaciado de bandas\n",
+      "- Alimentar Puzolana Húmeda a 426HO04 por MC2 (Espacio disponible: 500.00t)\n",
       "  Ajustar velocidad del transportador a 1100-1150 RPM\n",
       "  ADVERTENCIA: Posible contaminación al vaciar el sistema. Proceder con precaución.\n",
       "  Esperar 3 minutos para vaciado de bandas\n",
-      "- Alimentar Puzolana Seca a MC3 por MC2\n",
+      "- Alimentar Yeso a MC2 por MC2 (Espacio disponible: 120.00t)\n",
+      "  Ajustar velocidad del transportador a 850-900 RPM\n",
+      "  ADVERTENCIA: Posible contaminación al vaciar el sistema. Proceder con precaución.\n",
+      "  Esperar 3 minutos para vaciado de bandas\n",
+      "- Alimentar Clinker a MC3 (Espacio disponible: 60.00t)\n",
+      "  ADVERTENCIA: Posible contaminación al vaciar el sistema. Proceder con precaución.\n",
+      "  Esperar 3 minutos para vaciado de bandas\n",
+      "- Alimentar Puzolana Seca a MC3 por MC2 (Espacio disponible: 35.00t)\n",
       "  Ajustar velocidad del transportador a 1100-1150 RPM\n",
       "  ADVERTENCIA: Posible contaminación al vaciar el sistema. Proceder con precaución.\n",
-      "  Esperar 3 minutos para vaciado de bandas\n"
+      "  Esperar 3 minutos para vaciado de bandas\n",
+      "- Alimentar Yeso a MC3 por MC2 (Espacio disponible: 30.00t)\n",
+      "  Ajustar velocidad del transportador a 850-900 RPM\n",
+      "  ADVERTENCIA: Posible contaminación al vaciar el sistema. Proceder con precaución.\n",
+      "  Esperar 3 minutos para vaciado de bandas\n",
+      "\n",
+      "Niveles actualizados de las tolvas:\n",
+      "\n",
+      "Niveles actuales de las tolvas:\n",
+      "\n",
+      "MC1:\n",
+      "  clinker: 14.00m / 14.00m\n",
+      "  puzolana: 0.00m / 12.00m\n",
+      "  yeso: 10.00m / 10.00m\n",
+      "\n",
+      "MC2:\n",
+      "  clinker: 9.00m / 9.00m\n",
+      "  puzolana_humeda: 0.00m / 15.00m\n",
+      "  puzolana_seca: 0.00m / 12.00m\n",
+      "  yeso: 9.00m / 9.00m\n",
+      "\n",
+      "MC3:\n",
+      "  clinker: 60.00m / 100.00m\n",
+      "  puzolana: 0.00m / 100.00m\n",
+      "  yeso: 30.00m / 100.00m\n",
+      "\n",
+      "Silo Blanco: 0.00m / 10.50m\n",
+      "Silo B: 0.00m / 10.00m\n",
+      "Galpón: 0.00m / 20.00m\n"
      ]
     }
    ],
@@ -77,6 +135,12 @@
     "    def tiempo_vaciado(self, consumo_por_hora: float) -> float:\n",
     "        toneladas_reales = (self.nivel_actual * self.capacidad) / self.altura_max\n",
     "        return toneladas_reales / consumo_por_hora if consumo_por_hora > 0 else float('inf')\n",
+    "\n",
+    "    def alimentar(self, cantidad: float):\n",
+    "        self.nivel_actual = min(self.nivel_actual + cantidad, self.altura_max)\n",
+    "\n",
+    "    def espacio_disponible(self) -> float:\n",
+    "        return self.capacidad - (self.nivel_actual * self.capacidad / self.altura_max)\n",
     "\n",
     "class Molino:\n",
     "    def __init__(self, nombre: str, tolvas: Dict[str, Tolva], rendimiento: float):\n",
@@ -129,13 +193,21 @@
     "            molino.set_producto(tipo_producto, alimentacion_fresca, ratios)\n",
     "\n",
     "    def solicitar_tipo_producto(self, nombre_molino: str) -> TipoProducto:\n",
+    "        productos_disponibles = {\n",
+    "            \"MC1\": [TipoProducto.P30, TipoProducto.P40],\n",
+    "            \"MC2\": [TipoProducto.P10, TipoProducto.P16, TipoProducto.P20, TipoProducto.P30],\n",
+    "            \"MC3\": [TipoProducto.P30]\n",
+    "        }\n",
+    "        productos_str = \", \".join([tipo.value for tipo in productos_disponibles[nombre_molino]])\n",
+    "        print(f\"\\nTipos de producto disponibles para {nombre_molino}: {productos_str}\")\n",
     "        while True:\n",
-    "            print(f\"\\nTipos de producto disponibles para {nombre_molino}:\")\n",
-    "            for tipo in TipoProducto:\n",
-    "                print(f\"- {tipo.value}\")\n",
     "            seleccion = input(f\"Seleccione el tipo de producto para {nombre_molino}: \").upper()\n",
     "            try:\n",
-    "                return TipoProducto(seleccion)\n",
+    "                tipo_producto = TipoProducto(seleccion)\n",
+    "                if tipo_producto in productos_disponibles[nombre_molino]:\n",
+    "                    return tipo_producto\n",
+    "                else:\n",
+    "                    print(\"Producto no disponible para este molino. Por favor, intente de nuevo.\")\n",
     "            except ValueError:\n",
     "                print(\"Selección inválida. Por favor, intente de nuevo.\")\n",
     "\n",
@@ -159,78 +231,82 @@
     "\n",
     "    def optimizar_alimentacion(self) -> List[str]:\n",
     "        recomendaciones = []\n",
-    "        recomendaciones.extend(self.optimizar_clinker())\n",
-    "        recomendaciones.extend(self.optimizar_yeso())\n",
-    "        recomendaciones.extend(self.optimizar_puzolana())\n",
+    "        for molino in [self.mc1, self.mc2, self.mc3]:\n",
+    "            recomendaciones.extend(self.optimizar_molino(molino))\n",
     "        return recomendaciones\n",
     "\n",
-    "    def optimizar_clinker(self) -> List[str]:\n",
-    "        if self.carga_banda_transporte >= 210:\n",
-    "            return [\"No se puede alimentar más Clinker. Carga máxima de banda alcanzada.\"]\n",
+    "    def optimizar_molino(self, molino: Molino) -> List[str]:\n",
+    "        print(f\"\\nOptimizando {molino.nombre}\")\n",
+    "        print(f\"Producto actual: {molino.tipo_producto.value}\")\n",
+    "        print(\"Necesidades:\")\n",
+    "        for material, ratio in molino.ratios.items():\n",
+    "            necesidad = molino.alimentacion_fresca * ratio / 100\n",
+    "            print(f\"  {material.capitalize()}: {necesidad:.2f}t/h\")\n",
     "\n",
-    "        tiempos_vaciado = {\n",
-    "            \"MC1\": self.mc1.tiempo_vaciado(\"clinker\"),\n",
-    "            \"MC2\": self.mc2.tiempo_vaciado(\"clinker\"),\n",
-    "            \"MC3\": self.mc3.tiempo_vaciado(\"clinker\")\n",
-    "        }\n",
-    "        molino_prioritario = min(tiempos_vaciado, key=tiempos_vaciado.get)\n",
-    "\n",
-    "        if molino_prioritario == \"MC2\" and self.mc2.tipo_producto == TipoProducto.P10:\n",
-    "            if self.silo_b.nivel_actual > 0:\n",
-    "                return [\"Alimentar Clinker a MC2 desde Silo B\"]\n",
-    "            elif self.galpon.nivel_actual > 0:\n",
-    "                return [\"Alimentar Clinker a MC2 desde galpón\"]\n",
-    "            else:\n",
-    "                return [\"No se puede alimentar Clinker para P10 en MC2\"]\n",
-    "\n",
-    "        if molino_prioritario == \"MC3\":\n",
-    "            if self.silo_blanco.nivel_actual > 3:\n",
-    "                return [\"Alimentar Clinker a MC3 desde Silo Blanco\"]\n",
-    "            else:\n",
-    "                return [\"Alimentar Clinker a Silo Blanco desde Pretrit\"]\n",
-    "\n",
-    "        return [f\"Alimentar Clinker a {molino_prioritario} desde Pretrit\"]\n",
-    "\n",
-    "    def optimizar_yeso(self) -> List[str]:\n",
-    "        tiempos_vaciado = {\n",
-    "            \"MC1\": self.mc1.tiempo_vaciado(\"yeso\"),\n",
-    "            \"MC2\": self.mc2.tiempo_vaciado(\"yeso\"),\n",
-    "            \"MC3\": self.mc3.tiempo_vaciado(\"yeso\")\n",
-    "        }\n",
-    "        molino_prioritario = min(tiempos_vaciado, key=tiempos_vaciado.get)\n",
-    "\n",
-    "        if molino_prioritario == \"MC1\":\n",
-    "            if self.mc1.tolvas[\"yeso\"].nivel_actual + 2 <= self.mc1.tolvas[\"yeso\"].altura_max:\n",
-    "                return [\"Alimentar Yeso a MC1 por MC1\"]\n",
-    "            else:\n",
-    "                return [\"Alimentar Yeso a MC1 por MC2\"]\n",
-    "        elif molino_prioritario == \"MC2\":\n",
-    "            return [\"Alimentar Yeso a MC2 por MC2\"]\n",
-    "        else:  # MC3\n",
-    "            if self.mc1.tolvas[\"yeso\"].nivel_actual > self.mc2.tolvas[\"yeso\"].nivel_actual:\n",
-    "                return [\"Alimentar Yeso a MC3 por MC1\"]\n",
-    "            else:\n",
-    "                return [\"Alimentar Yeso a MC3 por MC2\"]\n",
-    "\n",
-    "    def optimizar_puzolana(self) -> List[str]:\n",
     "        recomendaciones = []\n",
-    "        \n",
-    "        tiempo_vaciado_mc1 = self.mc1.tiempo_vaciado(\"puzolana\")\n",
-    "        tiempo_vaciado_mc2 = self.mc2.tiempo_vaciado(\"puzolana_humeda\") if \"puzolana_humeda\" in self.mc2.tolvas else float('inf')\n",
-    "        \n",
-    "        if tiempo_vaciado_mc1 < tiempo_vaciado_mc2:\n",
-    "            if \"Yeso a L1 por L1\" not in self.alimentaciones_actuales and \"Clinker a L3\" not in self.alimentaciones_actuales:\n",
-    "                recomendaciones.append(\"Alimentar Puzolana Húmeda a MC1 por MC1\")\n",
-    "        else:\n",
-    "            if \"puzolana_humeda\" in self.mc2.tolvas and self.mc2.tolvas[\"puzolana_humeda\"].nivel_actual <= 9:\n",
-    "                if all(x not in self.alimentaciones_actuales for x in [\"Yeso a L2 por L2\", \"Yeso a L3 por L2\", \"Yeso a L1 por L2\", \"Puzolana a L1 por L2\"]):\n",
-    "                    recomendaciones.append(\"Alimentar Puzolana Húmeda a 426HO04 por MC2\")\n",
+    "        for material, tolva in molino.tolvas.items():\n",
+    "            if material in molino.ratios:\n",
+    "                espacio_disponible = tolva.espacio_disponible()\n",
+    "                tiempo_llenado = espacio_disponible / (molino.alimentacion_fresca * molino.ratios[material] / 100)\n",
+    "                recomendacion = self.generar_recomendacion_especifica(molino, material, espacio_disponible)\n",
+    "                recomendaciones.append(recomendacion)\n",
+    "                print(f\"Tiempo estimado para llenar {material.capitalize()}: {tiempo_llenado:.2f} horas\")\n",
+    "            else:\n",
+    "                print(f\"No se requiere {material.capitalize()} para el producto actual en {molino.nombre}\")\n",
     "\n",
-    "        # Puzolana Seca para MC3\n",
-    "        if \"Clinker a L3\" not in self.alimentaciones_actuales and \"Yeso a L3\" not in self.alimentaciones_actuales:\n",
-    "            recomendaciones.append(\"Alimentar Puzolana Seca a MC3 por MC2\")\n",
+    "        print(\"Restricciones:\")\n",
+    "        print(\"Es necesario vaciar el sistema antes de una nueva alimentación para evitar contaminación.\")\n",
     "\n",
     "        return recomendaciones\n",
+    "\n",
+    "    def generar_recomendacion_especifica(self, molino: Molino, material: str, espacio_disponible: float) -> str:\n",
+    "        if molino.nombre == \"MC1\":\n",
+    "            if material == \"puzolana\":\n",
+    "                return f\"Alimentar Puzolana Húmeda a MC1 por MC1 (Espacio disponible: {espacio_disponible:.2f}t)\"\n",
+    "            elif material == \"yeso\":\n",
+    "                if molino.tolvas[\"yeso\"].nivel_actual + 2 <= molino.tolvas[\"yeso\"].altura_max:\n",
+    "                    return f\"Alimentar Yeso a MC1 por MC1 (Espacio disponible: {espacio_disponible:.2f}t)\"\n",
+    "                else:\n",
+    "                    return f\"Alimentar Yeso a MC1 por MC2 (Espacio disponible: {espacio_disponible:.2f}t)\"\n",
+    "        elif molino.nombre == \"MC2\":\n",
+    "            if material == \"puzolana_humeda\":\n",
+    "                return f\"Alimentar Puzolana Húmeda a 426HO04 por MC2 (Espacio disponible: {espacio_disponible:.2f}t)\"\n",
+    "            elif material == \"yeso\":\n",
+    "                return f\"Alimentar Yeso a MC2 por MC2 (Espacio disponible: {espacio_disponible:.2f}t)\"\n",
+    "        elif molino.nombre == \"MC3\":\n",
+    "            if material == \"puzolana\":\n",
+    "                return f\"Alimentar Puzolana Seca a MC3 por MC2 (Espacio disponible: {espacio_disponible:.2f}t)\"\n",
+    "            elif material == \"yeso\":\n",
+    "                if self.mc1.tolvas[\"yeso\"].nivel_actual > self.mc2.tolvas[\"yeso\"].nivel_actual:\n",
+    "                    return f\"Alimentar Yeso a MC3 por MC1 (Espacio disponible: {espacio_disponible:.2f}t)\"\n",
+    "                else:\n",
+    "                    return f\"Alimentar Yeso a MC3 por MC2 (Espacio disponible: {espacio_disponible:.2f}t)\"\n",
+    "        \n",
+    "        return f\"Alimentar {material.capitalize()} a {molino.nombre} (Espacio disponible: {espacio_disponible:.2f}t)\"\n",
+    "\n",
+    "    def aplicar_recomendaciones(self, recomendaciones: List[str]):\n",
+    "        for recomendacion in recomendaciones:\n",
+    "            partes = recomendacion.split()\n",
+    "            material = partes[1].lower()\n",
+    "            molino_destino = partes[3]\n",
+    "            cantidad = float(partes[-1].strip(\"t)\"))\n",
+    "\n",
+    "            if molino_destino == \"MC1\":\n",
+    "                self.mc1.tolvas[material].alimentar(cantidad)\n",
+    "            elif molino_destino == \"MC2\" or molino_destino == \"426HO04\":\n",
+    "                self.mc2.tolvas[material].alimentar(cantidad)\n",
+    "            elif molino_destino == \"MC3\":\n",
+    "                self.mc3.tolvas[material].alimentar(cantidad)\n",
+    "\n",
+    "    def imprimir_niveles_tolvas(self):\n",
+    "        print(\"\\nNiveles actuales de las tolvas:\")\n",
+    "        for molino in [self.mc1, self.mc2, self.mc3]:\n",
+    "            print(f\"\\n{molino.nombre}:\")\n",
+    "            for nombre_tolva, tolva in molino.tolvas.items():\n",
+    "                print(f\"  {nombre_tolva}: {tolva.nivel_actual:.2f}m / {tolva.altura_max:.2f}m\")\n",
+    "        print(f\"\\nSilo Blanco: {self.silo_blanco.nivel_actual:.2f}m / {self.silo_blanco.altura_max:.2f}m\")\n",
+    "        print(f\"Silo B: {self.silo_b.nivel_actual:.2f}m / {self.silo_b.altura_max:.2f}m\")\n",
+    "        print(f\"Galpón: {self.galpon.nivel_actual:.2f}m / {self.galpon.altura_max:.2f}m\")\n",
     "\n",
     "    def ajustar_velocidad_transportador(self, material: str):\n",
     "        if material == \"puzolana\":\n",
@@ -243,9 +319,10 @@
     "\n",
     "def main():\n",
     "    sistema = SistemaAlimentacion()\n",
-    "    sistema.set_productos()\n",
     "    \n",
     "    while True:\n",
+    "        sistema.set_productos()  # Preguntar por el tipo de producto para cada molino en cada ciclo\n",
+    "        \n",
     "        recomendaciones = sistema.optimizar_alimentacion()\n",
     "        \n",
     "        print(\"\\nRecomendaciones de alimentación:\")\n",
@@ -257,6 +334,11 @@
     "                print(f\"  {sistema.ajustar_velocidad_transportador('yeso')}\")\n",
     "            print(f\"  {sistema.verificar_contaminacion()}\")\n",
     "            print(\"  Esperar 3 minutos para vaciado de bandas\")\n",
+    "        \n",
+    "        sistema.aplicar_recomendaciones(recomendaciones)\n",
+    "        \n",
+    "        print(\"\\nNiveles actualizados de las tolvas:\")\n",
+    "        sistema.imprimir_niveles_tolvas()\n",
     "        \n",
     "        continuar = input(\"\\n¿Desea realizar otra optimización? (s/n): \").lower()\n",
     "        if continuar != 's':\n",
